# Test_Platform

./: .env  .gitignore  README.md  docker-compose.yaml  init.sql
agent/: .env  README.md  const.py  main.py  pyproject.toml  requirement.txt  utils.py
agent/chip_runner_plugin/: find_test_cases.py
agent/test_runner_plugin/: find_test_cases.py  test_runner_plugin.py
crun/: Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
crun/alembic/: env.py
crun/app/: app.py  main.py
crun/app/config/: config.py
crun/app/config/settings/: dir.py  lark.py  mysql.py
crun/app/core/: database.py  deps.py  orm.py
crun/app/core/clients/: agent_client.py
crun/app/core/middleware/: tenant.py
crun/app/crud/: __init__.py  base.py  project.py  test_plan.py
crun/app/crud/bug/: bug.py
crun/app/crud/case/: case_node.py  case_record.py  cases.py
crun/app/crud/report/: reports.py
crun/app/crud/resource/: server.py
crun/app/crud/task/: task.py  task_config.py  task_record.py
crun/app/models/: __init__.py  project.py  test_plan.py  user.py
crun/app/models/bug/: bug.py
crun/app/models/case/: case_node.py  case_record.py  cases.py
crun/app/models/reports/: report.py
crun/app/models/resource/: server.py
crun/app/models/task/: task.py  task_config.py  task_record.py
crun/app/schemas/: __init__.py  base.py  project.py  test_plan.py  user.py
crun/app/schemas/bug/: bug.py
crun/app/services/: __init__.py  task.py  task_record.py  test_plan.py
crun/app/tests/: conftest.py  test_project.py
prometheus/: prometheus.yml
(+149 files in other folders)
